# eigen_example

./: .gitignore  CMakeLists.txt  README.md  compile.bash
src/: 2d_transform.cpp  diagonalization.cpp  gramschmidt.hpp  orthogonal_matrix.cpp  psuedo_inverse_qr.cpp  psuedo_matrix_qr.cpp  qr_decomposition.cpp  skew_symmetric_matrix.cpp  solve_formula.cpp  test.cpp  utils.hpp
